# estudo_DS

./: .gitignore  README.md  cola_paths_data_science.txt  cola_paths_ds.md  pyproject.toml
notebooks/: 01_exploracao.ipynb
notebooks/curso_1/estatistica_descritiva/: 01_explorando.ipynb  01_renomear.ipynb  02_classificando.ipynb  03_calculando_frequencias.ipynb
src/ds_core/: paths.py
src/ds_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
